<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- AppBarLayout 內包 CollapsingToolbarLayout 和 Toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="true"
            app:collapsedTitleTextColor="@android:color/white"
            app:expandedTitleTextColor="@android:color/black">

            <com.yun.taipeizooooo.view.GlideImageView
                android:id="@+id/glide_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="?attr/homeAsUpIndicator" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- 可滾動的內文 -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 英文名字 -->
            <TextView
                style="@style/ItemDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_detail_eng_name" />

            <TextView
                android:id="@+id/tv_item_english_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- 別名 -->
            <TextView
                style="@style/ItemDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_detail_also_known" />

            <TextView
                android:id="@+id/tv_also_known"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- 簡介 -->
            <TextView
                style="@style/ItemDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_detail_intro" />

            <TextView
                android:id="@+id/tv_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- 辨認方式 -->
            <TextView
                style="@style/ItemDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_detail_feature" />

            <TextView
                android:id="@+id/tv_feature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- 功能性 -->
            <TextView
                style="@style/ItemDetailTitle"
                android:id="@+id/tv_function_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_detail_function_plant" />

            <TextView
                android:id="@+id/tv_function"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- 時間 -->
            <TextView
                style="@style/ItemDetailTitle"
                android:id="@+id/tv_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>